made a mistake with my z-index, had to correct it

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@
   grid-area: header;
 }
 
+.zdex {
+  z-index: 100;
+}
+
 .main {
   grid-area: main;
 }
